# webscrape

./: README.md  fetcher.py  markdown_writer.py  parser.py  pyproject.toml  scraper.py
.github/workflows/: build-apk.yml
android_src/: settings.gradle.kts
android_src/app/: build.gradle.kts
android_src/app/src/main/: AndroidManifest.xml
android_src/app/src/main/kotlin/com/webscrape/recipemd/: MainActivity.kt
android_src/app/src/main/kotlin/com/webscrape/recipemd/data/: Fetcher.kt  MarkdownWriter.kt  Recipe.kt  RecipeParser.kt  SitemapCrawler.kt
android_src/app/src/main/kotlin/com/webscrape/recipemd/ui/: MainScreen.kt  ScraperViewModel.kt
android_src/app/src/main/res/values/: strings.xml  themes.xml
