[project]
name = "webscrape"
version = "0.1.0"
description = "Web scraper for indianhealthyrecipes.com — extracts recipes to Markdown"
requires-python = ">=3.11"
dependencies = [
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.0.0",
]

[project.scripts]
webscrape = "scraper:main"
